First Commit To project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			</div>
 			<main>
 				<h2>Enjoy Nature in Luxury</h2>
+				<h3>Testing</h3>
                 <video controls="controls" poster="pacifictrailsresort.jpg">
                     <source src="pacifictrailsresort.ogv" type="video/ogg">
                     <embed type="application/x-shockwave-flash" src="pacifictrailsresort.swf" quality="high" width="320" height="240" title="Pacific Trails Resort">
